--- a/config.ini
+++ b/config.ini
@@ -1,16 +1,16 @@
 [common]
 main_mode=1
 failed_output_folder=failed
-success_output_folder=JAV_output
+success_output_folder=success
 soft_link=0
-failed_move=1
+failed_move=0
 auto_exit=0
-transalte_to_sc=1
+transalte_to_sc=0
 
 [proxy]
 ;proxytype: http or socks5 or socks5h
 type=socks5
-proxy=127.0.0.1:1080
+proxy=
 timeout=5
 retry=3
 
@@ -23,11 +23,15 @@ max_title_len= 50
 update_check=1
 
 [priority]
-website=javbus,javdb,fanza,xcity,mgstage,fc2,avsox,jav321,javlib,dlsite
+website=javdb,javbus,fanza,xcity,mgstage,fc2,avsox,jav321,javlib,dlsite
 
 [escape]
 literals=\()/
-folders=failed,JAV_output
+folders=failed,success
 
 [debug_mode]
 switch=0
+
+[others]
+leftover=gallery,gallery.zip
+filter_name_path="./filter_name.txt"
