Fixed filter name feature
 - Fixed filter name feature
 - Make patching studio name to filename as option
 - Add directory for decompression
 - Minor fixes

--- a/config.ini
+++ b/config.ini
@@ -18,12 +18,14 @@ retry=3
 location_rule=actor+'/'+number
 naming_rule=number+'-'+title
 max_title_len= 50
+add_studio_to_number=1
 
 [update]
 update_check=1
 
 [priority]
-website=javdb,javbus,fanza,xcity,mgstage,fc2,avsox,jav321,javlib,dlsite
+website=javdb,javbus,fanza,xcity,fc2,avsox,jav321,javlib,dlsite
+; website=javdb,javbus,fanza,xcity,fc2,jav321,javlib,dlsite
 
 [escape]
 literals=\()/
@@ -34,4 +36,4 @@ switch=0
 
 [others]
 leftover=gallery,gallery.zip
-filter_name_path="./filter_name.txt"
+filter_name_path=./filter_name.txt
