Enhance support to multi-part video
 - Now support multi-part video with -A or -a suffix (option in config)
 - Made the movie move function safe (i.e. will not override existing movies)
 - Fixed nfo filename not match with video after patching studio name

--- a/config.ini
+++ b/config.ini
@@ -6,6 +6,8 @@ soft_link=0
 failed_move=0
 auto_exit=0
 transalte_to_sc=0
+;if this enabled, the chinese subtitle tag feature will be disabled 
+multi_part_abc=1
 
 [proxy]
 ;proxytype: http or socks5 or socks5h
@@ -24,8 +26,8 @@ add_studio_to_number=1
 update_check=1
 
 [priority]
-website=javdb,javbus,fanza,xcity,fc2,avsox,jav321,javlib,dlsite
-; website=javdb,javbus,fanza,xcity,fc2,jav321,javlib,dlsite
+; website=javdb,javbus,fanza,xcity,fc2,avsox,jav321,javlib,dlsite
+website=javdb,javbus,fanza,xcity,fc2,jav321,javlib,dlsite
 
 [escape]
 literals=\()/
