--- a/config.ini
+++ b/config.ini
@@ -5,9 +5,11 @@ success_output_folder=success
 soft_link=0
 failed_move=0
 auto_exit=0
-transalte_to_sc=0
+translate_to_sc=0
+translate_to_tc=1
+translate_dict_path=./tags_dict.csv
 ;if this enabled, the chinese subtitle tag feature will be disabled 
-multi_part_abc=1
+multi_part_abc=0
 
 [proxy]
 ;proxytype: http or socks5 or socks5h
@@ -26,7 +28,7 @@ add_studio_to_number=1
 update_check=1
 
 [priority]
-; website=javdb,javbus,fanza,xcity,fc2,avsox,jav321,javlib,dlsite
+; website=javbus,javdb,fanza,xcity,fc2,avsox,jav321,javlib,dlsite
 website=javdb,javbus,fanza,xcity,fc2,jav321,javlib,dlsite
 
 [escape]
