Fixed censer video id regex

--- a/config.ini
+++ b/config.ini
@@ -28,8 +28,8 @@ add_studio_to_number=1
 update_check=1
 
 [priority]
-; website=javbus,javdb,fanza,xcity,fc2,avsox,jav321,javlib,dlsite
-website=javdb,javbus,fanza,xcity,fc2,jav321,javlib,dlsite
+website=javbus,javdb,fanza,fc2,avsox
+; website=javdb,javbus,fanza,xcity,fc2,jav321,javlib,dlsite,avsox
 
 [escape]
 literals=\()/
