--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ translate_to_sc=0
 translate_to_tc=1
 translate_dict_path=./tags_dict.csv
 ;if this enabled, the chinese subtitle tag feature will be disabled 
-multi_part_abc=0
+multi_part_abc=1
 
 [proxy]
 ;proxytype: http or socks5 or socks5h
@@ -41,3 +41,9 @@ switch=0
 [others]
 leftover=gallery,gallery.zip
 filter_name_path=./filter_name.txt
+
+[porn]
+website=badoinkvr
+location_rule=actor+'/'+title+' ('+year+')'
+naming_rule=title
+keep_name_original=1
