--- a/config.ini
+++ b/config.ini
@@ -9,7 +9,7 @@ translate_to_sc=0
 translate_to_tc=1
 translate_dict_path=./tags_dict.csv
 ;if this enabled, the chinese subtitle tag feature will be disabled 
-multi_part_abc=1
+multi_part_abc=0
 
 [proxy]
 ;proxytype: http or socks5 or socks5h switch: 0 1
@@ -22,6 +22,7 @@ retry=3
 [Name_Rule]
 location_rule=actor+'/'+number
 naming_rule=number+'-'+title
+leak_naming_rule=number+'('+leak_code+')'+'-'+title
 max_title_len= 50
 add_studio_to_number=1
 
@@ -37,7 +38,7 @@ literals=\()/
 folders=failed,success
 
 [debug_mode]
-switch=1
+switch=0
 
 [translate]
 switch=0
