Add Monitor script

--- a/config.ini
+++ b/config.ini
@@ -54,3 +54,9 @@ keep_name_original=1
 [others]
 leftover=gallery,gallery.zip
 filter_name_path=./filter_name.txt
+
+[monitor]
+normal_dir=/sharedfolders/study/downloads/normal
+vr_dir=/sharedfolders/study/downloads/vr
+data_dir=/sharedfolders/study/AV_Data_Capture/data
+recursive=1
