javbus temp fix

--- a/config.ini
+++ b/config.ini
@@ -30,8 +30,8 @@ add_studio_to_number=1
 update_check=1
 
 [priority]
-website=javbus,javdb,fanza,fc2,avsox
-; website=airav,javbus,javdb,fanza,xcity,mgstage,fc2,avsox,jav321,javlib,dlsite
+website=javbus,javdb,fanza,fc2
+; website=airav,javbus,javdb,fanza,xcity,mgstage,fc2,avsox,javlib,dlsite
 
 [escape]
 literals=\()/
@@ -56,7 +56,7 @@ leftover=gallery,gallery.zip
 filter_name_path=./filter_name.txt
 
 [monitor]
-normal_dir=/sharedfolders/study/downloads/normal
-vr_dir=/sharedfolders/study/downloads/vr
-data_dir=/sharedfolders/study/AV_Data_Capture/data
+normal_dir=/mnt/pool/study/downloads/normal
+vr_dir=/mnt/pool/study/downloads/vr
+data_dir=/mnt/pool/study/AV_Data_Capture/data
 recursive=1
